# electri-city-gdrive

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
electridrive/: __init__.py  cli.py  config.py  licensing.py  logging_setup.py
electridrive/google_api/: app_client.py  client.py  oauth.py  picker.py
electridrive/storage/: database.py
electridrive/sync/: downloader.py  engine.py  hasher.py  rules.py  twoway.py  uploader.py
electridrive/transfers/: __init__.py  manager.py
electridrive/ui/: app.py  icons.py  main_window.py  session.py  theme.py  widgets.py
electridrive/ui/views/: explorer_view.py  login_view.py  settings_view.py  sync_view.py  transfers_view.py  vfs_view.py
electridrive/vfs/: __init__.py  fuse_mount.py
packaging/: electridrive.desktop  electridrive.spec
scripts/: bake_client.py  build_appimage.sh  build_deb.sh  build_release.sh  install_desktop.sh  install_dev.sh  make_icon.py  run_ui.sh
server/: Dockerfile  README.md  electridrive-license.service  license_server.py  requirements.txt
systemd/: electridrive-sync.service  electridrive-sync.timer
tests/: fakes.py  test_app_client.py  test_database.py  test_downloader.py  test_engine.py  test_license_server.py  test_licensing.py  test_picker.py  test_rules.py  test_scopes.py  test_transfers.py  test_twoway.py  test_uploader.py  test_vfs.py
